feat: 新增图片识别文字功能

--- a/libs/free_image_ocr/package.json
+++ b/libs/free_image_ocr/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "free_image_ocr",
+  "name": "@myorg/free_image_ocr",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test/test.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,6 @@
   "dependencies": {
     "jimp": "^1.6.0",
     "tesseract.js": "^6.0.1"
-  }
+  },
+  "type": "module"
 }
