--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,7 +13,8 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "zustand": "^5.0.4"
+    "zustand": "^5.0.4",
+    "@myorg/free_image_ocr": "workspace:*"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
