--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
     "@myorg/free_image_ocr": "workspace:*",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.1",
     "react-syntax-highlighter": "^15.6.1",
     "zustand": "^5.0.4"
   },
