--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@myorg/free_image_ocr": "workspace:*",
+    "d3": "^7.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-syntax-highlighter": "^15.6.1",
+    "three": "^0.177.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
